--- a/Presentations/FlyerBack.graffle/data.plist
+++ b/Presentations/FlyerBack.graffle/data.plist
@@ -33,6 +33,66 @@
 			<key>AllowConnections</key>
 			<string>NO</string>
 			<key>Bounds</key>
+			<string>{{581.102, 340.158}, {240.945, 127.559}}</string>
+			<key>Class</key>
+			<string>ShapedGraphic</string>
+			<key>FitText</key>
+			<string>Clip</string>
+			<key>Flow</key>
+			<string>Clip</string>
+			<key>HFlip</key>
+			<string>YES</string>
+			<key>ID</key>
+			<integer>1138</integer>
+			<key>Shape</key>
+			<string>Rectangle</string>
+			<key>Style</key>
+			<dict>
+				<key>fill</key>
+				<dict>
+					<key>Draws</key>
+					<string>NO</string>
+				</dict>
+				<key>shadow</key>
+				<dict>
+					<key>Draws</key>
+					<string>NO</string>
+				</dict>
+				<key>stroke</key>
+				<dict>
+					<key>CornerRadius</key>
+					<real>4</real>
+					<key>Draws</key>
+					<string>NO</string>
+				</dict>
+			</dict>
+			<key>Text</key>
+			<dict>
+				<key>Pad</key>
+				<integer>0</integer>
+				<key>Text</key>
+				<string>{\rtf1\mac\ansicpg10000\cocoartf824\cocoasubrtf420
+{\fonttbl\f0\fswiss\fcharset77 Helvetica;}
+{\colortbl;\red255\green255\blue255;}
+\pard\tx560\tx1120\tx1680\tx2240\tx2800\tx3360\tx3920\tx4480\tx5040\tx5600\tx6160\tx6720\sa40\qc\pardirnatural
+
+\f0\fs20 \cf0 \expnd0\expndtw0\kerning0
+Linux, Windows XP and Mac OS X\
+Ethernet, InfiniBand interconnects\
+\
+Open standard for parallel rendering\
+LGPL license: commercial and open source use\
+\
+Collaborations welcome\
+Consulting and support available}</string>
+			</dict>
+			<key>TextPlacement</key>
+			<integer>0</integer>
+		</dict>
+		<dict>
+			<key>AllowConnections</key>
+			<string>NO</string>
+			<key>Bounds</key>
 			<string>{{581.102, 368.504}, {240.945, 14.1732}}</string>
 			<key>Class</key>
 			<string>ShapedGraphic</string>
@@ -566,7 +626,8 @@ task-specific
 
 \f0\b\fs24 \cf0 \expnd0\expndtw0\kerning0
 Use Cases
-\f1\b0\fs20 \
+\f1\b0\fs20 \expnd0\expndtw0\kerning0
+\
 \pard\tx560\tx1120\tx1680\tx2240\tx2800\tx3360\tx3920\tx4480\tx5040\tx5600\tx6160\tx6720\sa80\qj\pardirnatural
 \cf0 \expnd0\expndtw0\kerning0
 \
@@ -574,22 +635,25 @@ Equalizer abstracts the configuration from the application. This allows the same
 \f2\b \expnd0\expndtw0\kerning0
 \
 Display Walls
-\f1\b0  (top left) \expnd0\expndtw0\kerning0
-are one of the most common use case for visualization clusters today. The typical configuration, as shown on the left, executes one instance of the application's rendering code for each display.
+\f1\b0 \expnd0\expndtw0\kerning0
+ (top left) are one of the most common use case for visualization clusters today. The typical configuration, as shown on the left, executes one instance of the application's rendering code for each display.
 \f2\b \expnd0\expndtw0\kerning0
 \
 Virtual Reality Installations
-\f1\b0  (bottom left)
-\f2\b  
+\f1\b0 \expnd0\expndtw0\kerning0
+ (bottom left)
+\f2\b \expnd0\expndtw0\kerning0
+ 
 \f1\b0 \expnd0\expndtw0\kerning0
 use passive or active stereo rendering with head tracking, both supported by Equalizer.
 \f2\b \expnd0\expndtw0\kerning0
 \
 Scalable Rendering
-\f1\b0  (right)\expnd0\expndtw0\kerning0
- parallelizes the rendering of a single view across multiple graphic cards, processors and potentially computers to render more data faster.\
+\f1\b0 \expnd0\expndtw0\kerning0
+ (right) parallelizes the rendering of a single view across multiple graphic cards, processors and potentially computers to render more data faster.\
+\pard\tx560\tx1120\tx1680\tx2240\tx2800\tx3360\tx3920\tx4480\tx5040\tx5600\tx6160\tx6720\sa80\qj\pardirnatural
 
-\f2\b \expnd0\expndtw0\kerning0
+\f2\b \cf0 \expnd0\expndtw0\kerning0
 Multipipe Workstations
 \f1\b0 \expnd0\expndtw0\kerning0
  are an affordable way to scale the rendering performance and display size. Equalizer applications can exploit multiple processors and multiple graphic cards by running multiple rendering threads.}</string>
@@ -910,7 +974,7 @@ Multipipe Workstations
 		</dict>
 	</array>
 	<key>ModificationDate</key>
-	<string>2007-04-17 11:35:36 +0200</string>
+	<string>2007-04-17 14:16:08 +0200</string>
 	<key>Modifier</key>
 	<string>Stefan Eilemann</string>
 	<key>NotesVisible</key>
@@ -982,8 +1046,6 @@ Multipipe Workstations
 		<string>Outline</string>
 		<key>DrawerWidth</key>
 		<real>209</real>
-		<key>FitInWindow</key>
-		<true/>
 		<key>Frame</key>
 		<string>{{387, 242}, {1073, 729}}</string>
 		<key>VisibleRegion</key>
