Website: Update flyer, resume and projects
[ ] May break build
[ ] Breaks existing applications
[ ] Bugfix
[ ] New Feature
[ ] Cleanup
[ ] Optimization
[x] Documentation

--- a/Presentations/FlyerBack.graffle/data.plist
+++ b/Presentations/FlyerBack.graffle/data.plist
@@ -38,11 +38,11 @@
 					<key>AllowConnections</key>
 					<string>NO</string>
 					<key>Bounds</key>
-					<string>{{287.045, 291.522}, {226.772, 269.291}}</string>
+					<string>{{306.017, 289.662}, {240.945, 269.291}}</string>
 					<key>Class</key>
 					<string>ShapedGraphic</string>
 					<key>ID</key>
-					<integer>1161</integer>
+					<integer>1178</integer>
 					<key>Shape</key>
 					<string>Rectangle</string>
 					<key>Style</key>
@@ -99,9 +99,8 @@ use passive or active stereo rendering with head tracking, both supported by Equ
 Scalable Rendering
 \f1\b0 \expnd0\expndtw0\kerning0
  parallelizes the rendering of a single view across multiple graphic cards, processors and potentially computers to render more data faster.\
-\pard\tx560\tx1120\tx1680\tx2240\tx2800\tx3360\tx3920\tx4480\tx5040\tx5600\tx6160\tx6720\sa80\qj\pardirnatural
 
-\f2\b \cf0 \expnd0\expndtw0\kerning0
+\f2\b \expnd0\expndtw0\kerning0
 Multi-GPU Workstations
 \f1\b0 \expnd0\expndtw0\kerning0
  are an affordable way to scale the rendering performance and display size. Equalizer applications can exploit multiple processors and graphic cards by running multiple rendering threads.}</string>
@@ -118,7 +117,7 @@ Multi-GPU Workstations
 							<key>AllowConnections</key>
 							<string>NO</string>
 							<key>Bounds</key>
-							<string>{{556.337, 390.734}, {226.772, 14.1732}}</string>
+							<string>{{589.482, 374.701}, {240.944, 14.1732}}</string>
 							<key>Class</key>
 							<string>ShapedGraphic</string>
 							<key>FontInfo</key>
@@ -129,7 +128,7 @@ Multi-GPU Workstations
 								<real>6</real>
 							</dict>
 							<key>ID</key>
-							<integer>1163</integer>
+							<integer>1180</integer>
 							<key>Shape</key>
 							<string>Rectangle</string>
 							<key>Style</key>
@@ -164,11 +163,11 @@ Multi-GPU Workstations
 						</dict>
 						<dict>
 							<key>Bounds</key>
-							<string>{{556.337, 234.828}, {226.772, 155.905}}</string>
+							<string>{{589.482, 218.795}, {240.944, 155.905}}</string>
 							<key>Class</key>
 							<string>ShapedGraphic</string>
 							<key>ID</key>
-							<integer>1164</integer>
+							<integer>1181</integer>
 							<key>ImageID</key>
 							<integer>7</integer>
 							<key>Scale</key>
@@ -186,7 +185,7 @@ Multi-GPU Workstations
 						</dict>
 					</array>
 					<key>ID</key>
-					<integer>1162</integer>
+					<integer>1179</integer>
 				</dict>
 				<dict>
 					<key>Class</key>
@@ -197,7 +196,7 @@ Multi-GPU Workstations
 							<key>AllowConnections</key>
 							<string>NO</string>
 							<key>Bounds</key>
-							<string>{{17.7535, 589.158}, {226.772, 14.1732}}</string>
+							<string>{{22.5525, 573.125}, {240.945, 14.1732}}</string>
 							<key>Class</key>
 							<string>ShapedGraphic</string>
 							<key>FontInfo</key>
@@ -208,7 +207,7 @@ Multi-GPU Workstations
 								<real>6</real>
 							</dict>
 							<key>ID</key>
-							<integer>1166</integer>
+							<integer>1183</integer>
 							<key>Shape</key>
 							<string>Rectangle</string>
 							<key>Style</key>
@@ -243,11 +242,11 @@ Multi-GPU Workstations
 						</dict>
 						<dict>
 							<key>Bounds</key>
-							<string>{{17.7535, 433.253}, {226.772, 155.906}}</string>
+							<string>{{22.5525, 417.219}, {240.945, 155.906}}</string>
 							<key>Class</key>
 							<string>ShapedGraphic</string>
 							<key>ID</key>
-							<integer>1167</integer>
+							<integer>1184</integer>
 							<key>ImageID</key>
 							<integer>3</integer>
 							<key>ManualSizeImage</key>
@@ -269,13 +268,13 @@ Multi-GPU Workstations
 						</dict>
 					</array>
 					<key>ID</key>
-					<integer>1165</integer>
+					<integer>1182</integer>
 				</dict>
 				<dict>
 					<key>AllowConnections</key>
 					<string>NO</string>
 					<key>Bounds</key>
-					<string>{{17.7535, 178.136}, {226.772, 14.1732}}</string>
+					<string>{{36.7256, 176.276}, {226.772, 14.1732}}</string>
 					<key>Class</key>
 					<string>ShapedGraphic</string>
 					<key>FontInfo</key>
@@ -286,7 +285,7 @@ Multi-GPU Workstations
 						<real>6</real>
 					</dict>
 					<key>ID</key>
-					<integer>1168</integer>
+					<integer>1185</integer>
 					<key>Shape</key>
 					<string>Rectangle</string>
 					<key>Style</key>
@@ -323,13 +322,13 @@ Multi-GPU Workstations
 					<key>AllowConnections</key>
 					<string>NO</string>
 					<key>Bounds</key>
-					<string>{{287.045, 22.2293}, {226.772, 255.118}}</string>
+					<string>{{306.017, 20.369}, {240.945, 255.118}}</string>
 					<key>Class</key>
 					<string>ShapedGraphic</string>
 					<key>HFlip</key>
 					<string>YES</string>
 					<key>ID</key>
-					<integer>1169</integer>
+					<integer>1186</integer>
 					<key>Shape</key>
 					<string>Rectangle</string>
 					<key>Style</key>
@@ -370,9 +369,8 @@ Major Features
 \pard\tx560\tx1120\tx1680\tx2240\tx2800\tx3360\tx3920\tx4480\tx5040\tx5600\tx6160\tx6720\sa80\qj\pardirnatural
 \cf0 \expnd0\expndtw0\kerning0
 \
-\pard\tx560\tx1120\tx1680\tx2240\tx2800\tx3360\tx3920\tx4480\tx5040\tx5600\tx6160\tx6720\sa80\qj\pardirnatural
 
-\f2\b \cf0 \expnd0\expndtw0\kerning0
+\f2\b \expnd0\expndtw0\kerning0
 Runtime Configurability:
 \f1\b0 \expnd0\expndtw0\kerning0
  An Equalizer application can run on any configuration, from laptops to large scale visualization clusters, without recompilation. The runtime configuration is externalized from the application to a systemwide resource server.\
@@ -397,17 +395,17 @@ Support for Immersive Environments:
 				</dict>
 				<dict>
 					<key>Bounds</key>
-					<string>{{17.7535, 22.2288}, {226.772, 155.906}}</string>
+					<string>{{22.5525, 20.3685}, {240.945, 155.906}}</string>
 					<key>Class</key>
 					<string>ShapedGraphic</string>
 					<key>ID</key>
-					<integer>1170</integer>
+					<integer>1187</integer>
 					<key>ImageID</key>
 					<integer>1</integer>
 					<key>ManualSizeImage</key>
 					<string>YES</string>
 					<key>Scale</key>
-					<real>0.11999999731779099</real>
+					<real>0.12999999523162842</real>
 					<key>Shape</key>
 					<string>Rectangle</string>
 					<key>Style</key>
@@ -423,13 +421,13 @@ Support for Immersive Environments:
 					<key>AllowConnections</key>
 					<string>NO</string>
 					<key>Bounds</key>
-					<string>{{17.7533, 206.482}, {226.772, 212.598}}</string>
+					<string>{{22.5523, 204.622}, {240.945, 212.598}}</string>
 					<key>Class</key>
 					<string>ShapedGraphic</string>
 					<key>HFlip</key>
 					<string>YES</string>
 					<key>ID</key>
-					<integer>1171</integer>
+					<integer>1188</integer>
 					<key>Shape</key>
 					<string>Rectangle</string>
 					<key>Style</key>
@@ -512,13 +510,13 @@ task methods
 					<key>AllowConnections</key>
 					<string>NO</string>
 					<key>Bounds</key>
-					<string>{{556.336, 419.08}, {226.773, 170.079}}</string>
+					<string>{{589.481, 403.046}, {240.945, 170.079}}</string>
 					<key>Class</key>
 					<string>ShapedGraphic</string>
 					<key>HFlip</key>
 					<string>YES</string>
 					<key>ID</key>
-					<integer>1172</integer>
+					<integer>1189</integer>
 					<key>Shape</key>
 					<string>Rectangle</string>
 					<key>Style</key>
@@ -590,13 +588,13 @@ OS Support:
 					<key>AllowConnections</key>
 					<string>NO</string>
 					<key>Bounds</key>
-					<string>{{556.336, 22.2294}, {226.773, 198.425}}</string>
+					<string>{{589.481, 20.3691}, {240.945, 198.425}}</string>
 					<key>Class</key>
 					<string>ShapedGraphic</string>
 					<key>HFlip</key>
 					<string>YES</string>
 					<key>ID</key>
-					<integer>1173</integer>
+					<integer>1190</integer>
 					<key>Shape</key>
 					<string>Rectangle</string>
 					<key>Style</key>
@@ -647,7 +645,7 @@ Fast Path for Scalable OpenGL Applications:
 \f1\b \expnd0\expndtw0\kerning0
 Feature-Rich Framework:
 \f2\b0 \expnd0\expndtw0\kerning0
- Equalizer contains state-of-the-art scalable rendering algorithms, and it\'d5s open development model ensures constant improvement. The configurability allows to deploy Equalizer applications in many, often unforeseen environments.}</string>
+ Equalizer contains state-of-the-art scalable rendering algorithms, and its open development model ensures constant improvement. The configurability allows to deploy Equalizer applications in many, often unforeseen environments.}</string>
 					</dict>
 					<key>TextPlacement</key>
 					<integer>0</integer>
@@ -656,11 +654,11 @@ Feature-Rich Framework:
 					<key>AllowConnections</key>
 					<string>NO</string>
 					<key>Bounds</key>
-					<string>{{3.58019, 8.05609}, {255.118, 595.276}}</string>
+					<string>{{8.37907, 6.1958}, {269.291, 581.102}}</string>
 					<key>Class</key>
 					<string>ShapedGraphic</string>
 					<key>ID</key>
-					<integer>1174</integer>
+					<integer>1191</integer>
 					<key>Shape</key>
 					<string>Rectangle</string>
 					<key>Style</key>
@@ -717,11 +715,11 @@ Feature-Rich Framework:
 					<key>AllowConnections</key>
 					<string>NO</string>
 					<key>Bounds</key>
-					<string>{{542.163, 8.05609}, {255.119, 595.276}}</string>
+					<string>{{575.308, 6.1958}, {269.291, 581.102}}</string>
 					<key>Class</key>
 					<string>ShapedGraphic</string>
 					<key>ID</key>
-					<integer>1175</integer>
+					<integer>1192</integer>
 					<key>Shape</key>
 					<string>Rectangle</string>
 					<key>Style</key>
@@ -778,11 +776,11 @@ Feature-Rich Framework:
 					<key>AllowConnections</key>
 					<string>NO</string>
 					<key>Bounds</key>
-					<string>{{272.872, 8.05609}, {255.118, 595.276}}</string>
+					<string>{{291.844, 6.1958}, {269.291, 581.102}}</string>
 					<key>Class</key>
 					<string>ShapedGraphic</string>
 					<key>ID</key>
-					<integer>1176</integer>
+					<integer>1193</integer>
 					<key>Shape</key>
 					<string>Rectangle</string>
 					<key>Style</key>
@@ -837,7 +835,7 @@ Feature-Rich Framework:
 				</dict>
 			</array>
 			<key>ID</key>
-			<integer>1160</integer>
+			<integer>1177</integer>
 		</dict>
 	</array>
 	<key>GridInfo</key>
@@ -857,7 +855,7 @@ Feature-Rich Framework:
 	<integer>1</integer>
 	<key>HorizontalGuides</key>
 	<array>
-		<real>306.40902709960938</real>
+		<real>297.32504272460938</real>
 	</array>
 	<key>ImageCounter</key>
 	<integer>10</integer>
@@ -971,7 +969,7 @@ Feature-Rich Framework:
 		</dict>
 	</array>
 	<key>ModificationDate</key>
-	<string>2007-05-08 19:07:16 +0200</string>
+	<string>2007-06-26 16:19:02 +0200</string>
 	<key>Modifier</key>
 	<string>Stefan Eilemann</string>
 	<key>NotesVisible</key>
@@ -1001,15 +999,10 @@ Feature-Rich Framework:
 			<string>int</string>
 			<string>1</string>
 		</array>
-		<key>NSPaperName</key>
-		<array>
-			<string>string</string>
-			<string>Letter</string>
-		</array>
 		<key>NSPaperSize</key>
 		<array>
 			<string>size</string>
-			<string>{792, 612}</string>
+			<string>{842, 595}</string>
 		</array>
 		<key>NSRightMargin</key>
 		<array>
@@ -1042,7 +1035,7 @@ Feature-Rich Framework:
 	<integer>1</integer>
 	<key>VerticalGuides</key>
 	<array>
-		<real>401.28952026367188</real>
+		<real>426.48934936523438</real>
 	</array>
 	<key>WindowInfo</key>
 	<dict>
@@ -1053,9 +1046,9 @@ Feature-Rich Framework:
 		<key>DrawerWidth</key>
 		<real>209</real>
 		<key>Frame</key>
-		<string>{{587, 142}, {976, 858}}</string>
+		<string>{{279, 48}, {984, 790}}</string>
 		<key>VisibleRegion</key>
-		<string>{{-38, -41}, {878.579, 694.818}}</string>
+		<string>{{-15, -19}, {884.979, 632.65}}</string>
 		<key>Zoom</key>
 		<real>1.1513806581497192</real>
 	</dict>
