Start Programming Guide
[ ] May break build
[ ] Breaks existing applications
[ ] Bugfix
[ ] New Feature
[ ] Cleanup
[ ] Optimization
[x] Documentation

--- a/Presentations/images/holobench.graffle/data.plist
+++ b/Presentations/images/holobench.graffle/data.plist
@@ -4,6 +4,11 @@
 <dict>
 	<key>ActiveLayerIndex</key>
 	<integer>0</integer>
+	<key>ApplicationVersion</key>
+	<array>
+		<string>com.omnigroup.OmniGrafflePro</string>
+		<string>129.12</string>
+	</array>
 	<key>AutoAdjust</key>
 	<true/>
 	<key>CanvasColor</key>
@@ -104,7 +109,7 @@
 			<array>
 				<string>{411.024, 99.7126}</string>
 				<string>{382.677, 155.905}</string>
-				<string>{402.337, 373.19}</string>
+				<string>{402.338, 373.19}</string>
 			</array>
 			<key>Style</key>
 			<dict>
@@ -1605,7 +1610,7 @@ viewport \{...\}}</string>
 			<real>-1</real>
 			<key>Points</key>
 			<array>
-				<string>{162.992, 85.5395}</string>
+				<string>{162.992, 85.0395}</string>
 				<string>{162.992, 99.2131}</string>
 			</array>
 			<key>Style</key>
@@ -2127,7 +2132,7 @@ eye [ LEFT RIGHT ]}</string>
 		</dict>
 		<dict>
 			<key>Bounds</key>
-			<string>{{14.1732, 226.771}, {56.6929, 184.253}}</string>
+			<string>{{14.1732, 226.771}, {70.8662, 184.253}}</string>
 			<key>Class</key>
 			<string>ShapedGraphic</string>
 			<key>FontInfo</key>
@@ -2206,7 +2211,7 @@ eye [ LEFT RIGHT ]}</string>
 			<key>Points</key>
 			<array>
 				<string>{170.079, 318.898}</string>
-				<string>{70.8661, 318.897}</string>
+				<string>{85.0394, 318.897}</string>
 			</array>
 			<key>Style</key>
 			<dict>
@@ -2252,7 +2257,7 @@ eye [ LEFT RIGHT ]}</string>
 			<key>Points</key>
 			<array>
 				<string>{113.386, 28.3463}</string>
-				<string>{42.5196, 226.771}</string>
+				<string>{49.6063, 226.771}</string>
 			</array>
 			<key>Style</key>
 			<dict>
@@ -2542,7 +2547,7 @@ eye [ LEFT RIGHT ]}</string>
 		</dict>
 	</array>
 	<key>ModificationDate</key>
-	<string>2007-04-17 11:15:10 +0200</string>
+	<string>2007-08-19 16:14:04 +0200</string>
 	<key>Modifier</key>
 	<string>Stefan Eilemann</string>
 	<key>NotesVisible</key>
@@ -2615,9 +2620,9 @@ eye [ LEFT RIGHT ]}</string>
 		<key>DrawerWidth</key>
 		<real>209</real>
 		<key>Frame</key>
-		<string>{{297, 161}, {1074, 846}}</string>
+		<string>{{251, 122}, {1074, 840}}</string>
 		<key>VisibleRegion</key>
-		<string>{{0, -1.99999}, {818, 577.775}}</string>
+		<string>{{0, 0}, {818, 572.368}}</string>
 		<key>Zoom</key>
 		<real>1.2946209907531738</real>
 	</dict>
